dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edu-dp
  labels: 
    app: edu-dp
spec: 
  replicas: 2
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      env: test
  template:
    metadata:
      labels:
        env: test
    spec:
      containers:
      - name: edu-dp
        image: kesha4/edu_health:v2
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        ports:
        - containerPort: 88
