service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edu-service
spec: 
  selector:
    env: test
  ports:
  - protocol: TCP
    port: 88
    targetPort: 8888
  type: LoadBalancer
